# theconstructsim_urdf

./: .gitignore
src/my_box_bot_description/: CMakeLists.txt  package.xml
src/my_box_bot_description/launch/: urdf_visualize.launch.py  urdf_visualize_control.launch.py  urdf_visualize_control_complete.launch.py  urdf_visualize_meshes.launch.py  urdf_visualize_meshes_collisions_inertias.launch.py  urdf_visualize_physical.launch.py  urdf_visualize_rviz.launch.py
src/my_box_bot_description/rviz/: urdf_vis.rviz
src/my_box_bot_description/urdf/: box_bot_geometric_meshes.urdf  box_bot_simple_ex1-1.urdf
src/my_box_bot_gazebo/: CMakeLists.txt
src/my_box_bot_gazebo/launch/: control.launch.py  spawn_robot_description.launch.py  spawn_robot_ros2.launch.xml  spawn_robot_ros2_physical.launch.xml  start_world.launch.py
src/my_box_bot_gazebo/scripts/: move_laser.py
src/my_robot_model/: CMakeLists.txt  README.md  package.xml
src/my_robot_model/launch/: spawn_robot_description.launch.py  spawn_robot_ros2.launch.xml  spawn_robot_ros2_control.launch.xml  start_world.launch.py  urdf_visualize.launch.py  urdf_visualize_geometric.launch.py  urdf_visualize_meshes.launch.py  urdf_visualize_meshes_collisions_inertias.launch.py
src/my_robot_model/rviz/: urdf_vis.rviz
src/my_robot_model/urdf/: box_bot.xacro  box_bot_geometric_meshes.urdf  box_bot_meshes_collisions_inertias.urdf
